# stl_obj_convertor

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/: file.py
src/obj_geometry_finder/: finder.py  run_obj_geometry_finder.py
src/obj_to_stl/: normal_vertex.py  obj_reader.py  obj_stl_convertor.py  run_obj_to_stl.py  stl_writer.py
src/stl_geometry_finder/: finder.py
src/stl_to_obj/: obj_writer.py  run_stl_to_obj.py  stl_obj_convertor.py  stl_reader.py
stl_obj_convertor/: convertor.py  geometry_finder.py
test/: test_obj_reader.py  test_obj_stl_convertor.py  test_obj_writer.py  test_stl_obj_convertor.py  test_stl_reader.py  test_stl_writer.py
test/test_data/: expected.stl  result.stl
utilis/: progressbar.py
