[metadata]
name = stl_obj_convertor
version = 0.1.0
author = Shivam Kadukar
author_contact = https://www.linkedin.com/in/shivam-kadukar-58b9b5180/
description = For converting .stl files to .obj and .obj files to .stl
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 4 - Beta 

    Intended Audience :: Developers
    Intended Audience :: Science/Research

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Multimedia :: Graphics :: 3D Modeling
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Scientific/Engineering
    Topic :: Text Processing

[options]
packages = find:
python_requires = >= 3.9.0
include_package_data = True



